# Shooter-Game-2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Modding Documentation.md  README.md  TODO.md
.github/workflows/: ubuntu-cmake-build.yml
Licenses/: EFFOLKRONIUM-RANDOM-License.MIT  FMT-License.rst  LUA_LICENSE.txt  TGUI-License.md
docs/: CircleShapeDocumentation.md  ColliderDocumentation.md  Color.md  ColorDocumentation.md  ContextSettingsDocumentation.md  ConvexShapeDocumentation.md  CursorDocumentation.md  FloatRectDocumentation.md  FontDocumentation.md  GlyphDocumentation.md  ImageDocumentation.md  IntRectDocumentation.md  JoystickDocumentation.md  KeyboardDocumentation.md  Modding Documentation.md  MouseDocumentation.md  RectangleShapeDocumentation.md  SoundBufferDocumentation.md  StopwatchDocumentation.md  TextDocumentation.md  TransformDocumentation.md  Vector2.md  Vector2Documentation.md  VideoModeDocumentation.md  ViewDocumentation.md
include/: CMakeLists.txt  Global.hpp  Version.hpp  lua.hpp  temp.cpp
include/InGame/: Collider.hpp  Entity.hpp  Game.hpp  GameManager.hpp  LuaEntity.hpp  Player.hpp  Version.hpp
include/InGame/Rendering/: MessageBoxWindow.hpp  MovingGradient.hpp
include/InGame/Scenes/: AboutScene.hpp  DebugScene.hpp  ExtendedScene.hpp  MainMenuScene.hpp
include/Modding/: AttachableObject.hpp  AttachableObject.inl  LuaExporter.hpp  LuaFunction.hpp  LuaHelper.hpp  Mod.hpp  ModConfig.hpp  ModLoader.hpp  ModManager.hpp  ShooterGameExporter.hpp
include/Modding/Exporters/: CircleShapeExporter.hpp  ColliderExporter.hpp  ColorExporter.hpp  ContextSettingsExporter.hpp  ConvexShapeExporter.hpp  CursorExporter.hpp  EntityExporter.hpp  EventExporter.hpp  FloatRectExporter.hpp  FontExporter.hpp  GlyphExporter.hpp  ImageExporter.hpp  IntRectExporter.hpp  JoystickExporter.hpp  KeyboardExporter.hpp  MouseExporter.hpp  MusicExporter.hpp  RectangleShapeExporter.hpp  RenderWindowExporter.hpp  SoundBufferExporter.hpp  SoundExporter.hpp  SpriteExporter.hpp  StopwatchExporter.hpp  TextExporter.hpp  TextureExporter.hpp  TransformExporter.hpp  Vector2Exporter.hpp  VideoModeExporter.hpp  ViewExporter.hpp
include/Network/: RequestManager.hpp
include/OsSpecific/: Config.hpp  WindowFunctionalities.hpp
include/Random/: Random.hpp
include/ResourceManagement/: TGUIFontManager.hpp
mods/CoreMod/: config.json
mods/bad_apple_mod/: config.json  readme
mods/bad_apple_mod/entities/: bad_apple_player.lua  block.lua  texture_loader.lua
mods/coremod/: config.json
mods/coremod/entities/: GameManager.lua  bullet.lua  wall.lua
src/: Global.cpp  Version.cpp  main.cpp
src/InGame/: Collider.cpp  Entity.cpp  Game.cpp  GameManager.cpp  LuaEntity.cpp  Player.cpp  Version.cpp
src/InGame/Rendering/: MessageBoxWindow.cpp  MovingGradient.cpp
src/InGame/Scenes/: AboutScene.cpp  DebugScene.cpp  ExtendedScene.cpp  MainMenuScene.cpp
src/Modding/: LuaExporter.cpp  LuaFunction.cpp  LuaHelper.cpp  Mod.cpp  ModConfig.cpp  ModLoader.cpp  ModManager.cpp  ShooterGameExporter.cpp
src/Modding/Exporters/: CircleShapeExporter.cpp  ColliderExporter.cpp  ColorExporter.cpp  ContextSettingsExporter.cpp  ConvexShapeExporter.cpp  CursorExporter.cpp  EntityExporter.cpp  EventExporter.cpp  FloatRectExporter.cpp  FontExporter.cpp  GlyphExporter.cpp  ImageExporter.cpp  IntRectExporter.cpp  JoystickExporter.cpp  KeyboardExporter.cpp  MouseExporter.cpp  MusicExporter.cpp  RectangleShapeExporter.cpp  RenderWindowExporter.cpp  SoundBufferExporter.cpp  SoundExporter.cpp  SpriteExporter.cpp  StopwatchExporter.cpp  TextExporter.cpp  TextureExporter.cpp  TransformExporter.cpp  Vector2Exporter.cpp  VideoModeExporter.cpp  ViewExporter.cpp
src/Network/: RequestManager.cpp
src/OsSpecific/: WindowFunctionalities.cpp
src/Random/: Random.cpp
src/ResourceManagement/: TGUIFontManager.cpp
